@@ -72,7 +72,7 @@ class DistroFunction(commands.CobblerFunction):
             items = self.api.find_distro(return_list=True, no_errors=True, **self.options.__dict__)
             for x in items:
                 print x.name
-            return 0
+            return True
 
         obj = self.object_manipulator_start(self.api.new_distro,self.api.distros)
         if obj is None:
