@@ -78,7 +78,7 @@ class ImageFunction(commands.CobblerFunction):
             items = self.api.find_image(return_list=True, no_errors=True, **self.options.__dict__)
             for x in items:
                 print x.name
-            return 0
+            return True
 
         obj = self.object_manipulator_start(self.api.new_image,self.api.images)
         if obj is None:
