@@ -89,7 +89,7 @@ class SystemFunction(commands.CobblerFunction):
             items = self.api.find_system(return_list=True, no_errors=True, **self.options.__dict__)
             for x in items:
                 print x.name
-            return 0
+            return True
 
         obj = self.object_manipulator_start(self.api.new_system,self.api.systems)
         if obj is None:
